# Mistake-Notebook

./: README.md  build.bat  debug_run.py  make_ico.py  pyproject.toml  错题库.spec
android/: build_apk.sh  buildozer.spec  main.py  pyproject.toml  setup_fonts.ps1
android-Kotlin/: build_final.txt  build_output.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output5.txt  build_output6.txt  local.properties  settings.gradle.kts
android-Kotlin/app/: build.gradle.kts
android-Kotlin/app/src/main/: AndroidManifest.xml
android-Kotlin/app/src/main/java/com/mistakenotebook/: MainActivity.kt
android-Kotlin/app/src/main/java/com/mistakenotebook/data/db/: AppDatabase.kt  QuestionDao.kt
android-Kotlin/app/src/main/res/drawable/: ic_edit.xml  ic_library.xml
android-Kotlin/app/src/main/res/layout/: dialog_edit_question.xml  fragment_quiz.xml  fragment_result.xml  item_question.xml
android-Kotlin/app/src/main/res/menu/: bottom_nav_menu.xml
android-Kotlin/app/src/main/res/navigation/: nav_graph.xml
android-Kotlin/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-Kotlin/gradle/: libs.versions.toml
android-Kotlin/gradle/wrapper/: gradle-wrapper.properties
android/src/mistake_notebook/: __init__.py  constants.py  storage.py
android/src/mistake_notebook/ui/: add_screen.py  quiz_screen.py  result_screen.py
dist2/data/: questions.json
src/mistake_notebook/: __init__.py  constants.py  main.py  models.py  storage.py
src/mistake_notebook/ui/: __init__.py  add_question.py  app.py  quiz.py  result.py
(+10 files in other folders)
