[project]
name = "mistake-notebook-android"
version = "1.0.0"
description = "错题库 Android 应用 (Kivy)"
requires-python = ">=3.12"
dependencies = [
    "kivy>=2.3.0",
    "kivymd>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mistake_notebook"]
